--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-uuid = {version = "1.1.2", features = ["v4"]}
-anyhow = "1.0.60"
-ang = "0.6.0"
-
+syn = "1.0"
+quote = "1.0"
+proc-macro2 = "1.0"
 [lib]
 proc-macro = true
